--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,8 @@
 
 .bodyy{
   background-image: url(/src/photo.jpg);
+  max-width:100%;
+  height:auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
