--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,28 +3,29 @@
 }
 
 .input {
-    display: flex;
+    display: grid;
     flex-shrink: initial;
     flex-direction: column;
     display: -ms-flex;
     display: -webkit-flex;
-    margin-left: 17%;
+    margin-left: -2%;
     margin-top: 25%;
-    width: 115%;
+    width: 110%;
 }
 
-.container {
+body {
     background-image: url(/src/photo.jpg);
     display: flex;
     display: -ms-flex;
     display: -webkit-flex;
     flex-direction: column;
     background-repeat: no-repeat;
-    background-size: 112vw;
+    background-size: 100% 100%;
+    height: 100vh;
 }
 
 @media only screen and (max-width: 844px) {
-    .container {
+    body {
         display: flex;
         flex-direction: row;
         display: -ms-flex;
@@ -34,8 +35,8 @@
     }
     .all {
         margin-top: 37%;
-        margin-left: -5%;
-        margin-right: 15%;
+        margin-left: 10%;
+        margin-right: -7%;
     }
     .list {
         margin-top: 100px;
@@ -43,7 +44,7 @@
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 700) {
-    .container {
+    body {
         display: flex;
         flex-direction: row;
         display: -ms-flex;
@@ -64,7 +65,7 @@
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 590px) {
-    .container {
+    body {
         display: flex;
         flex-direction: row;
         display: -ms-flex;
