--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,14 +3,16 @@
 }
 
 .input {
-    display: grid;
+    display: flex;
+    align-items: center;
     flex-shrink: initial;
     flex-direction: column;
     display: -ms-flex;
     display: -webkit-flex;
-    margin-left: -2%;
-    margin-top: 25%;
-    width: 110%;
+    margin-left: 4%;
+    margin-top: 23%;
+    width: 103%;
+    flex-shrink: 3;
 }
 
 body {
@@ -18,6 +20,8 @@ body {
     display: flex;
     display: -ms-flex;
     display: -webkit-flex;
+    max-width: 100%;
+    max-height: 100%;
     flex-direction: column;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -84,9 +88,9 @@ body {
         flex-direction: column;
         display: -ms-flex;
         display: -webkit-flex;
-        margin-left: 18%;
+        margin-left: 4%;
         margin-top: 30%;
-        width: 115%;
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fill, auto);
     }
